[package]
name = "biliroaming-rust-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"

md5 = "0.7"
chrono = "0.4"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
actix-web = "4"
